# openai-chat

./: pyproject.toml
ai/: chat.py  config.py
scripts/: run.py
