[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["sugyan <sugi1982@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.2"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
